// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Close button 1`] = `
<div>
  <button
    class="modal-open-button btn btn-danger"
    type="button"
  >
    Open
  </button>
  <div
    class="modal"
    style="display: none;"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            Modal title
          </div>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <p
          class="modal-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit
        </p>
        <p
          class="modal-footer"
        >
          <button
            class="modal-close-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component 1 1`] = `
<div>
  <button
    class="modal-open-button btn btn-danger"
    type="button"
  >
    Open
  </button>
  <div
    class="modal"
    style="display: none;"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            Modal title
          </div>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <p
          class="modal-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit
        </p>
        <p
          class="modal-footer"
        >
          <button
            class="modal-close-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component 1 2`] = `
<div>
  <button
    class="modal-open-button btn btn-danger"
    type="button"
  >
    Open
  </button>
  <div
    class="modal fade show"
    style="display: block;"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            Modal title
          </div>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <p
          class="modal-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit
        </p>
        <p
          class="modal-footer"
        >
          <button
            class="modal-close-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component 1 3`] = `
<div>
  <button
    class="modal-open-button btn btn-danger"
    type="button"
  >
    Open
  </button>
  <div
    class="modal"
    style="display: none;"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            Modal title
          </div>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <p
          class="modal-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit
        </p>
        <p
          class="modal-footer"
        >
          <button
            class="modal-close-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component 1 4`] = `
<div>
  <button
    class="modal-open-button btn btn-danger"
    type="button"
  >
    Open
  </button>
  <div
    class="modal fade show"
    style="display: block;"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            Modal title
          </div>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <p
          class="modal-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit
        </p>
        <p
          class="modal-footer"
        >
          <button
            class="modal-close-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component 1 5`] = `
<div>
  <button
    class="modal-open-button btn btn-danger"
    type="button"
  >
    Open
  </button>
  <div
    class="modal"
    style="display: none;"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            Modal title
          </div>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <p
          class="modal-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit
        </p>
        <p
          class="modal-footer"
        >
          <button
            class="modal-close-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component 1 6`] = `
<div>
  <button
    class="modal-open-button btn btn-danger"
    type="button"
  >
    Open
  </button>
  <div
    class="modal fade show"
    style="display: block;"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            Modal title
          </div>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <p
          class="modal-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit
        </p>
        <p
          class="modal-footer"
        >
          <button
            class="modal-close-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component 1 7`] = `
<div>
  <button
    class="modal-open-button btn btn-danger"
    type="button"
  >
    Open
  </button>
  <div
    class="modal"
    style="display: none;"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            Modal title
          </div>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <p
          class="modal-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit
        </p>
        <p
          class="modal-footer"
        >
          <button
            class="modal-close-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;
